# optimize-gemm

./: CMakeLists.txt  README.md  mm_blas.cpp  mm_eigen.cpp  mm_gsl.cpp  mm_kernel12x8.cpp  mm_kernel4x4.cpp  mm_naive.cpp  mm_naive_cache.cpp  mm_optimize.cpp  utils.hpp
